Implement head rendering and tracking, and recalibration

--- a/SpatialMusic/Info.plist
+++ b/SpatialMusic/Info.plist
@@ -39,6 +39,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSMotionUsageDescription</key>
+	<string>Allow app to access AirPod Pro&apos;s motion data</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
